fixed image spacing in leaderboard

--- a/src/app/leaderboard/leaderboard.component.css
+++ b/src/app/leaderboard/leaderboard.component.css
@@ -150,12 +150,13 @@
 }
 
 .champion-display {
+    display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .champion-display img {
     width: 40px;
     height: 40px;
-    margin-left: 10px;
     border-radius: 50%;
   }
